{
    "name": "MapControl",
    "maps": [
        {
            "name": "Player",
            "id": "493bf6fe-8839-42e9-a23a-9b87ecaeb641",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "f60ede55-bb61-418c-9bd6-5b1e5c7a5e6d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "4ac94d54-7138-4877-8974-6bb7025a7ecf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShiftUp",
                    "type": "Button",
                    "id": "312468ff-d3c3-4a9c-8736-ef17a5500d0e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShiftDown",
                    "type": "Button",
                    "id": "60450825-3f52-4b9a-9ab5-ab575bb69e01",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ac7442cb-7fd7-4b2f-be9d-6b32a2014f68",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cec59237-ba33-44b0-9c8b-41d791403a40",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "908a5758-12d2-467d-98aa-9bd77bf38d2f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ShiftUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8485761-1f35-41e4-ba29-78b7de4571d5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ShiftDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}